Fixed event handling, fixed pictures, fixed jquery

--- a/css/style.css
+++ b/css/style.css
@@ -83,4 +83,68 @@ footer {
      height: 960px;
 }
 
+.image2 {
+     background: url(../images/2.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
 
+.image3 {
+     background: url(../images/3.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image4 {
+     background: url(../images/4.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image5 {
+     background: url(../images/5.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image6 {
+     background: url(../images/6.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image7 {
+     background: url(../images/7.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image8 {
+     background: url(../images/8.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image9 {
+     background: url(../images/9.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image10 {
+     background: url(../images/10.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image11 {
+     background: url(../images/11.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image12 {
+     background: url(../images/12.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
