Fixed some more map

--- a/css/style.css
+++ b/css/style.css
@@ -148,3 +148,63 @@ footer {
      width: 960px;
      height: 960px;
 }
+
+.image13 {
+     background: url(../images/13.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image14 {
+     background: url(../images/15.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image15 {
+     background: url(../images/15.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image16 {
+     background: url(../images/16.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image17 {
+     background: url(../images/17.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image18 {
+     background: url(../images/18.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image19 {
+     background: url(../images/19.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image20 {
+     background: url(../images/20.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image21 {
+     background: url(../images/21.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
+
+.image22 {
+     background: url(../images/22.jpg) no-repeat;
+     width: 960px;
+     height: 960px;
+}
