Arrows added - some tidying

--- a/css/style.css
+++ b/css/style.css
@@ -71,140 +71,275 @@ footer {
 
 }
 
+h1 {
+     font-family: 'Josefin Sans', sans-serif;
+    font-size: 1.8em;
+}
+
+/*----------------------------------------------------------------------------- 
+   SOCIAL MEDIA  
+-----------------------------------------------------------------------------*/
+
+
+
+#socialMedia {
+    float: right;
+}
+
+#socialMedia ul li {
+     display:inline-block;
+     width:60px;
+     height:60px;
+     background:blue;   
+     text-indent:-9999em;
+}
+
+#socialMedia ul li.linkedIn {
+    background:url(../images/socialNav.png) 0px 64px;
+}
+#socialMedia ul li.twitter {
+    background:url(../images/socialNav.png) -60px 64px; 
+}
+
+#socialMedia ul li.facebook {
+    background:url(../images/socialNav.png) -120px 64px; 
+}
+
+#socialMedia ul li.rss {
+    background:url(../images/socialNav.png) -180px 64px; 
+}
+
+
+
+#socialMedia ul li.linkedIn:hover {
+    background:url(../images/socialNav.png) 0px 0px; 
+}
+
+#socialMedia ul li.twitter:hover {
+    background:url(../images/socialNav.png) -60px 0px; 
+}
+
+#socialMedia ul li.facebook:hover {
+    background:url(../images/socialNav.png) -120px 0px; 
+}
+
+#socialMedia ul li.rss:hover {
+    background:url(../images/socialNav.png) -180px 0px; 
+}
+
+
+/*----------------------------------------------------------
+- Navigation Arrows
+-----------------------------------------------------------*/
+
+
+
+#goleft {
+    margin: 200px 0px;
+     display:inline-block;
+     width:40px;
+     height:40px;
+    background:url(../images/arrows.png) 0px -5px;
+}
+
+#goright {
+     margin: 200px 0px;
+     display:inline-block;
+     width:40px;
+     height:40px;
+    background:url(../images/arrows.png) 42px -5px;
+    float:right; 
+}
+
+#goforward {
+     margin: 0px 250px;
+     display:inline-block;
+     width: 40px;
+     height:40px;
+     background:url(../images/arrows.png) -5px 46px;
+}
+
+#goback {
+     margin: 450px 250px;
+     display:inline-block;
+     width:40px;
+     height:40px;
+    background:url(../images/arrows.png) 42px -53px; 
+}
+
+
 /******************************************
 /* ADDITIONAL STYLES                   
 /*******************************************/
 
-#house {      width: 960px;      height: 960px; }
+#goforward {
+     width: 0px auto;
+
+}
+
+#goleft {
+     float: left;
+}
+
+#goright {
+     float: right;
+}
+
+#house {      
+     width: 550px;      
+     height: 550px; 
+}
 
 .image1 {
      background: url(../images/1.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center; 
 }
 
 .image2 {
      background: url(../images/2.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center; 
 }
 
 .image3 {
      background: url(../images/3.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+    background-position:center; 
 }
 
 .image4 {
      background: url(../images/4.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image5 {
      background: url(../images/5.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image6 {
      background: url(../images/6.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image7 {
      background: url(../images/7.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image8 {
      background: url(../images/8.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image9 {
      background: url(../images/9.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image10 {
      background: url(../images/10.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image11 {
      background: url(../images/11.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image12 {
      background: url(../images/12.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image13 {
      background: url(../images/13.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image14 {
      background: url(../images/14.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image15 {
      background: url(../images/15.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image16 {
      background: url(../images/16.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image17 {
      background: url(../images/17.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image18 {
      background: url(../images/18.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image19 {
      background: url(../images/19.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image20 {
      background: url(../images/20.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image21 {
      background: url(../images/21.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
 
 .image22 {
      background: url(../images/22.jpg) no-repeat;
-     width: 960px;
-     height: 960px;
+     width: 550px;
+     height: 550px;
+     background-position:center;
 }
