--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,57 @@ body {
      font-family: Helvetica, Arial, sans-serif;
 }
 
+/******************************************
+/* NAV BAR                 
+/*******************************************/
+    
+    nav {
+        float: left;
+    }
+
+
+   #nav {
+      width: 100%;
+      float: left;
+      margin: 0 0 3em 0;
+      padding: 0;
+      list-style: none;
+      background-color: #f2f2f2;
+      border-bottom: 1px solid #ccc; 
+      border-top: 1px solid #ccc; }
+   #nav li {
+      float: left; }
+   #nav li a {
+      display: block;
+      padding: 8px 15px;
+      text-decoration: none;
+      font-weight: bold;
+      color: #069;
+      border-right: 1px solid #ccc; }
+   #nav li a:hover {
+      color: #c00;
+      background-color: #fff; }
+   /* End navigation bar styling. */
+
+
+/*-------------------------------------------
+ CONTACT                   
+--------------------------------------------*/
+
+#contactcontent {
+    width: 960px;
+    margin: 0px auto;
+    background-color: #333;
+    color: #fff;
+    font-family: 'Gudea', sans-serif;
+    font-size: 2em;
+    padding: 8em 2em 10em 2em;
+}
+
+#contactcontent input, textarea {
+    width: 100%;
+    clear: both;
+}
 
 /******************************************
 /* LAYOUT                   
@@ -63,11 +114,11 @@ body {
 	margin: auto;
 }
 
-header h2 {
+#subheader h2 {
     font-family: 'Josefin Sans', sans-serif;
     font-size: 5em;
-    margin: 0px 0px;
-
+    margin: -30px 0px;
+    height: 50px;
 }
 
 footer {
@@ -146,7 +197,8 @@ h1 {
 
 
 #goleft {
-    margin: 200px 0px;
+    position: absolute;
+    margin: 170px 0px;
      display:inline-block;
      width:40px;
      height:40px;
@@ -154,7 +206,8 @@ h1 {
 }
 
 #goright {
-     margin: 200px 0px;
+    position: absolute;
+     margin: 170px 510px;
      display:inline-block;
      width:40px;
      height:40px;
@@ -163,7 +216,7 @@ h1 {
 }
 
 #goforward {
-     margin: 0px 250px;
+     margin: -2px 250px;
      display:inline-block;
      width: 40px;
      height:40px;
@@ -171,11 +224,14 @@ h1 {
 }
 
 #goback {
-     margin: 0px 250px;
+    position: absolute;
+     margin:0px 250px;
      display:inline-block;
      width:40px;
      height:40px;
-    background:url(../images/arrows.png) 42px -53px; 
+    background:url(../images/arrows.png) 42px -53px;
+    top: 480px;
+
 }
 
 
@@ -183,26 +239,16 @@ h1 {
 /* ADDITIONAL STYLES                   
 /*******************************************/
 
-#goforward {
-     width: 0px auto;
-
-}
-
-#goleft {
-
-}
-
-#goright {
-
-}
 
 #house {      
      width: 550px;      
-     height: 550px; 
+     height: 550px;
+     margin: 50px 0px; 
 }
 
 #housepic {
     margin: 0px auto;
+    position: relative;
 }
 
 .image1 {
